[Update 2018-06-01]
- Issue #1: Fixed Deviruchi Headphone Description and Stats; [Kato]
- Issue #2:  Added Palace Guard[1]; [Kato]
[Update 2018-06-02]
- Issue #9: Added Mob Spirit of Lord Kaho; [Kato]
- Issue #10: Added Hawk Eye; [Kato]
- Issue #11: Added Dropping Permeter, also added a new Attack Modifier for Turtle; [Kato]
[Update 2018-06-02 | 2]
- Issue #14: Added Burning Crown; [Kato]
- Issue #15: Fixed Anubis Hat; [Kato]
- Issue #16: Added Guillotine Katar; [Kato]
- Issues #17,#18,#19,#20: Added Aegir Helm, Shoes, Cloak, Armor and it's combo bonuses; [Kato/Nattwara]
- Fixed missplaced information for Deviruchi Headphones for -1% MHP; [Kato]
- Removed old footer with old infos; [Kato]
- Adjusted CSS file merging in file ones; [Kato]
- Removed old Delays leaving only tRO ones (Still need to remove the text); [Kato]
- Removed all the old changelogs; [Kato]
- Issue #22: Added Reforged Lord Kaho's Horns; [Kato]
- Issue #24: Added Advanced Fin Helm; [Kato]
- Issue #7: Added Pajamas Hats; [ZoneSoldier]
- Issue #32: Changed Engineer's Hat to Engineer Cap; [ZoneSoldier]
- Issue #33: Changed Rabbit Ear to Rabbit Earplugs; [ZoneSoldier]
- Issue #34: Added Eden Items; [ZoneSoldier]
[Update 2018-06-03]
- Fixed the delays, set all to 0.33 default, taken out the save in cookie; [Kato]
- Revamp in index.html, nixed the changelog, fixed html selects, indented the code (at least a little bit), fixed link to tRO's mobDB and etcetera; [Kato]
- #Issue #30 Added Legionnaire Hat; [ZoneSoldier]
- #Issue #41 Changed Name from Scarf Belt to Belcarf; [ZoneSoldier]