@@ -24,5 +24,15 @@
 [Update 2018-06-03]
 - Fixed the delays, set all to 0.33 default, taken out the save in cookie; [Kato]
 - Revamp in index.html, nixed the changelog, fixed html selects, indented the code (at least a little bit), fixed link to tRO's mobDB and etcetera; [Kato]
+- #Issue #25 Added Lude Mask; [ZoneSoldier]
+- #Issue #26 Added Xmas Rudolph Hairband; [ZoneSoldier]
+- Fixed issue with Bayani Buwaya Skin Clothes stats Elemental resistances were set a 3% where as Website says 7%; [ZoneSoldier]
+- #Issue #27 Added Xmas Snowman Hat; [ZoneSoldier]
+- #Issue #28 Added Xmas Rudolph Santa Hat; [ZoneSoldier]
 - #Issue #30 Added Legionnaire Hat; [ZoneSoldier]
+- #Issue #38 Added Bakonawa Agimat Tattoo; [ZoneSoldier]
+- #Issue #39 Added Bangungot Agimat Tattoo;[ZoneSoldier]
+- #Issue 40 Added Cat Hand Glove; [ZoneSoldier]
 - #Issue #41 Changed Name from Scarf Belt to Belcarf; [ZoneSoldier]
+- #Issue #42 Added Bunch of Carnations; [ZoneSoldier]
+- #Issue #43 Added Buwaya Agimat Tattoo; [ZoneSoldier]
